apps/my-django-app/templates/osrm-monolith-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osrm-monolith-service
spec:
  type: ClusterIP
  selector:
    app: osrm-monolith
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
